change UI so copy and edit possible

--- a/src/loophole/static/index.html
+++ b/src/loophole/static/index.html
@@ -26,6 +26,9 @@
           <button id="record-btn" class="btn btn-primary" disabled>
             Start Recording
           </button>
+          <button id="copy-btn" class="btn btn-secondary">
+            Copy All
+          </button>
           <button id="clear-btn" class="btn btn-secondary">
             Clear
           </button>
@@ -38,7 +41,7 @@
 
       <section class="transcript-section">
         <label for="transcript">Transcript:</label>
-        <textarea id="transcript" readonly placeholder="Transcribed text will appear here..."></textarea>
+        <textarea id="transcript" placeholder="Transcribed text will appear here..."></textarea>
       </section>
     </main>
 
